--- a/collector/package.json
+++ b/collector/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "epub2": "^3.0.2",
+    "exif-reader": "^2.0.2",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "html-to-text": "^9.0.5",
@@ -48,8 +49,8 @@
     "youtubei.js": "^9.1.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.22",
-    "prettier": "^2.4.1",
-    "cross-env": "^7.0.3"
+    "prettier": "^2.4.1"
   }
 }
